--- a/ExportFromDatabaseToXML/ExportFromDatabaseToXML/ExportFromDatabaseToXML.csproj
+++ b/ExportFromDatabaseToXML/ExportFromDatabaseToXML/ExportFromDatabaseToXML.csproj
@@ -47,11 +47,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\ExecutorQuerySQL.cs" />
+    <Compile Include="Classes\GeneratorXML.cs" />
     <Compile Include="Classes\ReaderTextFile.cs" />
-    <Compile Include="FormMain.cs">
+    <Compile Include="Forms\FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
+    <Compile Include="Forms\FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormLogging.cs">
